force-app/main/default/objects/Staged_Program_Booking__c/Staged_Program_Booking__c.object-meta.xml
<CustomObject>
    <description>Contains the booking information for programs that meet at different times throughout the week</description>
    <label>Staged Program Booking</label>
    <nameField>
        <displayFormat>SPBN-{000000}</displayFormat>
        <label>Staged Program Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staged Program Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>