force-app/main/default/objects/Staged_Program_Booking__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Facility</label>
    <referenceTo>TREX1__Facility__c</referenceTo>
    <relationshipLabel>Staged Program Bookings</relationshipLabel>
    <relationshipName>Staged_Program_Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>