force-app/main/default/objects/Staged_Program_Booking__c/fields/Staged_Program__c.field-meta.xml
<CustomField>
    <fullName>Staged_Program__c</fullName>
    <label>Staged Program</label>
    <referenceTo>Staged_Program__c</referenceTo>
    <relationshipLabel>Staged Program Bookings</relationshipLabel>
    <relationshipName>Staged_Program_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>