force-app/main/default/objects/Staged_Program_Booking__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>