force-app/main/default/objects/Staged_Program_Booking__c/validationRules/FacilityLocationMustMatchProgramLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>FacilityLocationMustMatchProgramLocation</fullName>
    <active>true</active>
    <description>The booking&apos;s facility must be within the staged program&apos;s location</description>
    <errorConditionFormula>Facility__r.TREX1__Location__c &lt;&gt; Staged_Program__r.Location__c</errorConditionFormula>
    <errorMessage>The booking&apos;s facility must be within the staged program&apos;s location</errorMessage>
</ValidationRule>