force-app/main/default/objects/Staged_Program_Booking__c/validationRules/StagedProgramMustHaveALocation.validationRule-meta.xml
<ValidationRule>
    <fullName>StagedProgramMustHaveALocation</fullName>
    <active>true</active>
    <description>Set a location before creating staged program bookings</description>
    <errorConditionFormula>ISBLANK( Staged_Program__r.Location__c )</errorConditionFormula>
    <errorMessage>Set a location before creating staged program bookings</errorMessage>
</ValidationRule>