force-app/main/default/objects/Staged_Program_Booking__c/validationRules/StartTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>StartTimeValidation</fullName>
    <active>true</active>
    <description>Time should be entered as HH:MM AM/PM</description>
    <errorConditionFormula>IF(
  !ISBLANK(Start_Time__c),
  NOT(REGEX( Start_Time__c , &quot;(0?[1-9]|1[012])(:[0-5]\\d)\\s[APap][mM]$&quot;)),
  FALSE
)</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Time should be entered as HH:MM AM/PM</errorMessage>
</ValidationRule>